# mailmux

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml
bank-tx-processor/: Cargo.toml  README.md
crates/mailmux/: Cargo.toml
crates/mailmux/src/: cli.rs  health.rs  housekeeping.rs  main.rs  metrics.rs
crates/mailmux/src/db/: events.rs  jobs.rs  mod.rs
crates/mailmux/src/events/: listener.rs  mod.rs
crates/mailmux/src/imap/: mod.rs  sync.rs
crates/mailmux/src/processor/: mod.rs  registry.rs  scheduler.rs
docs/: design.md  features.md
mailmux/: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml
mailmux/contrib/: mailmux.service
mailmux/docs/: tasks.md
mailmux/src/: cli.rs  config.rs  logging.rs  main.rs  metrics.rs  shutdown.rs  store.rs
mailmux/src/db/: emails.rs  events.rs  jobs.rs
mailmux/src/events/: listener.rs
mailmux/src/imap/: connection.rs  mod.rs  sync.rs
mailmux/src/processor/: mod.rs  registry.rs  scheduler.rs
mailmux/src/processor/builtin/: command.rs  logger.rs
mailtx/: .gitignore  AGENTS.md  Cargo.toml  README.md
mailtx/docs/: llm-crate-research.md  manual-testing.md  tester-tool.md  transfer-detection.md
mailtx/src/: config.rs  input.rs  llm.rs  main.rs  matcher.rs  metrics.rs  post.rs  transfer.rs
mailtx/src/endpoint/: firefly.rs  mod.rs
mailtx/tools/tester/: categories.json  pyproject.toml  tester.py
migrations/: 20240101000000_initial_schema.sql
run/: .gitignore  reset.sh  run.sh
scripts/: find_imap_uid.py
src/: config.rs  email.rs  llm.rs  main.rs  shutdown.rs  store.rs
src/db/: emails.rs  events.rs  jobs.rs
src/imap/: connection.rs  sync.rs
src/processor/builtin/: command.rs  logger.rs
