[workspace]
members = ["crates/mailmux"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.101"
tracing = "0.1"
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal", "process", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono", "json"] }
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
regex = "1"
imap-next = "0.3"
mail-parser = "0.11"
governor = "0.10"
nonzero_ext = "0.3"
async-trait = "0.1"
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "1.0"
axum = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
sd-notify = "0.4"
