[package]
name = "mailmux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
governor = "0.10"
imap-next = "0.3"
mail-parser = "0.11"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
nonzero_ext = "0.3"
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-pemfile = "2"
sanitize-filename = "0.6.0"
sd-notify = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono", "json"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "signal", "process", "io-util"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
webpki-roots = "1.0"

[dev-dependencies]
temp-env = "0.3.6"
tempfile = "3"
