[package]
name = "mailtx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
genai = "0.5"
html2text = "0.16"
mail-parser = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
