[package]
name = "mailmux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
imap-next = { workspace = true }
mail-parser = { workspace = true }
governor = { workspace = true }
nonzero_ext = { workspace = true }
async-trait = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = "3"
