[project]
name = "mailtx-tester"
version = "0.1.0"
description = "Manual testing harness for mailtx"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mailtx-tester = "tester:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
